Fix wrapping on repo page
Closes #10572

--- a/web/src/site-admin/SiteAdminRepositoriesPage.scss
+++ b/web/src/site-admin/SiteAdminRepositoriesPage.scss
@@ -57,3 +57,9 @@
         }
     }
 }
+
+.repository-node {
+    &__actions {
+        flex: 0 0 auto;
+    }
+}
